apps/networking/wg-easy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wg-easy
  namespace: wg-easy
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  annotations:
    cert-manager.io/cluster-issuer: local-ca

spec:
  ingressClassName: nginx
  rules:
    - host: wg-easy.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wg-easy-ui
                port:
                  number: 51821

  tls:
    - hosts:
        - wg-easy.home.arpa
      secretName: wg-easy-tls
